--- a/sketch.html
+++ b/sketch.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>table</title>
   </head>
-  <body></body>
+  <body>
+    <script src="sketch.js"></script>
+  </body>
 </html>
