--- a/sketch.html
+++ b/sketch.html
@@ -7,6 +7,7 @@
     <title>table</title>
   </head>
   <body>
+    <div class="title">ETCH A SKETCH</div>
     <script src="sketch.js"></script>
   </body>
 </html>
