--- a/sketch.html
+++ b/sketch.html
@@ -7,7 +7,7 @@
     <title>table</title>
   </head>
   <body>
-    <div class="title">ETCH A SKETCH</div>
+    <div class="title">ETCH A <span></span>SKETCH</span></div>
     <script src="sketch.js"></script>
   </body>
 </html>
