Added list element

--- a/sketch.html
+++ b/sketch.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div class="title">ETCH A <span class="red-title">SKETCH</span></div>
+    <div class="container">
+      <ul>
+        <li class="button">Colro Mode</li>
+        <li class="button">Random Mode</li>
+        <li class="button">Eraser</li>
+        <li class="button">Clear</li>
+        <li></li>
+      </ul>
+    </div>
     <script src="sketch.js"></script>
   </body>
 </html>
