--- a/sketch.html
+++ b/sketch.html
@@ -8,15 +8,14 @@
   </head>
   <body>
     <div class="title">ETCH A <span class="red-title">SKETCH</span></div>
-    <div class="container">
-      <ul>
-        <li class="button">Colro Mode</li>
-        <li class="button">Random Mode</li>
-        <li class="button">Eraser</li>
-        <li class="button">Clear</li>
-        <li></li>
-      </ul>
+
+    <div class="buttons">
+      <button class="btn color-mode">Color Mode</button>
+      <button class="btn random-mode">Random Mode</button>
+      <button class="btn eraser">Eraser</button>
+      <button class="btn clear">Clear</button>
     </div>
+
     <script src="sketch.js"></script>
   </body>
 </html>
