--- a/sketch.html
+++ b/sketch.html
@@ -7,13 +7,15 @@
     <title>table</title>
   </head>
   <body>
-    <div class="title">ETCH A <span class="red-title">SKETCH</span></div>
+    <div class="container">
+      <div class="title">ETCH A <span class="red-title">SKETCH</span></div>
 
-    <div class="buttons">
-      <button class="btn color-mode">Color Mode</button>
-      <button class="btn random-mode">Random Mode</button>
-      <button class="btn eraser">Eraser</button>
-      <button class="btn clear">Clear</button>
+      <div class="buttons">
+        <button class="btn color-mode">Color Mode</button>
+        <button class="btn random-mode">Random Mode</button>
+        <button class="btn eraser">Eraser</button>
+        <button class="btn clear">Clear</button>
+      </div>
     </div>
 
     <script src="sketch.js"></script>
