--- a/sketch.html
+++ b/sketch.html
@@ -28,7 +28,7 @@
         <button class="btn eraser">Eraser</button>
         <button class="btn clear">Clear</button>
 
-        <div>
+        <div class="range-box">
           <label for="size">Grid size:</label>
           <input type="range" id="size" min="2" max="64" value="16" />
           <span id="sizeValue">16 × 16</span>
