--- a/sketch.html
+++ b/sketch.html
@@ -2,24 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="sketch.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch A Sketch</title>
-    <link rel="stylesheet" href="sketch.css" />
   </head>
   <body>
     <div class="title">ETCH A <span class="red-title">SKETCH</span></div>
 
     <div class="container">
       <div class="buttons">
-        <p>Choose your colors:</p>
-
         <div>
-          <input
-            type="color"
-            id="background"
-            name="background"
-            value="#ff0000"
-          />
+          <input type="color" id="background" name="background" value="#red" />
           <label for="background">Brush color</label>
         </div>
 
