added value for color

--- a/sketch.html
+++ b/sketch.html
@@ -12,7 +12,12 @@
     <div class="container">
       <div class="buttons">
         <div>
-          <input type="color" id="background" name="background" value="#red" />
+          <input
+            type="color"
+            id="background"
+            name="background"
+            value="#FF0000;"
+          />
           <label for="background">Brush color</label>
         </div>
 
