--- a/sketch.html
+++ b/sketch.html
@@ -16,9 +16,9 @@
             type="color"
             id="background"
             name="background"
-            value="#FF0000;"
+            value="#ff0000"
           />
-          <label for="background">Brush color</label>
+          <label for="background"></label>
         </div>
 
         <button class="btn color-mode">Color Mode</button>
