--- a/sketch.html
+++ b/sketch.html
@@ -11,18 +11,18 @@
 
     <div class="container">
       <div class="buttons">
-        <div>
+        <div class="picker-box">
           <input
             type="color"
             id="background"
             name="background"
             value="#ff0000"
           />
-          <label for="background"></label>
+          <label for="background">Brush color</label>
         </div>
 
         <button class="btn color-mode">Color Mode</button>
-        <button class="btn random-mode">Random Mode</button>
+        <button class="btn random">Random Mode</button>
         <button class="btn eraser">Eraser</button>
         <button class="btn clear">Clear</button>
 
